--- a/styles/app.css
+++ b/styles/app.css
@@ -25,6 +25,13 @@
     font-weight: normal;
     padding: 0.5rem 0 0 0;
   }
+
+  h3 {
+    font-size: 1rem;
+    text-align: left;
+    font-weight: normal;
+    padding: 0.5rem 0 0 0;
+  }
   
   .main-controls {
     padding: 0.5rem 0;
