--- a/styles/app.css
+++ b/styles/app.css
@@ -27,8 +27,8 @@
   }
 
   h3 {
-    font-size: 1rem;
-    text-align: left;
+    font-size: 1.5rem;
+    text-align: center;
     font-weight: normal;
     padding: 0.5rem 0 0 0;
   }
