--- a/styles/app.css
+++ b/styles/app.css
@@ -10,6 +10,7 @@
   
   body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    /* font-family: 'Comfortaa', cursive; */
     font-size: 0.8rem;
   }
   
@@ -23,7 +24,8 @@
     font-size: 2rem;
     text-align: center;
     font-weight: normal;
-    padding: 0.5rem 0 0 0;
+    padding: 2rem 0 0 0;
+    margin: 0;
   }
 
   h3 {
@@ -31,22 +33,7 @@
     text-align: center;
     font-weight: normal;
     padding: 0.5rem 0 0 0;
-  }
-
-  main {
-    position: relative;
-    text-align: center;
-    top: calc(var(--short) / 2);
-    left: 0;
-    right: 0;
-  }
-
-  video {
-    -moz-transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-    display: none;
+    margin: 0;
   }
   
   .main-controls {
@@ -62,6 +49,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin: 0px 50px;
   }
   
   #buttons button {
